CORS modification, added GET request for courses and logged-in user, DTO correction, added DB initializer